--- a/public/css/inbox.css
+++ b/public/css/inbox.css
@@ -1,13 +1,15 @@
 .message-sender {
     font-size: smaller;
 }
-.m-list{
-	color: #ebf9ff;
-	border: 1px solid black;
+
+.m-list {
+    color: #ebf9ff;
+    border: 1px solid black;
 }
-.m-list:hover{
-	color: black;
-	background-color: #d9d9d9;
+
+.m-list:hover {
+    color: black;
+    background-color: #d9d9d9;
 }
 
 .message-list-body {
@@ -27,30 +29,138 @@
     margin-top: 2%;
 }
 
-.fa-star{
-	opacity: .5;
-	margin-left: 67.5px;
-	margin-top: -5px;
-	position: absolute;
-}
-.fa-ellipsis-h{
-	float: right;
-	margin-right: 5%;
-}
-.fa-ellipsis-h:hover{
-	cursor: pointer;
-}
-.dropdown-item:hover{
-	background-color: #d9d9d9;
-	cursor: pointer;
-}
-.fa-backward:hover{
-	cursor: pointer;
-}
-.fa-forward:hover{
-	cursor: pointer;
+.fa-star {
+    opacity: .5;
 }
 
-.fa-backward, .fa-forward{
-	margin: 5px;
+.fa-ellipsis-h {
+    float: right;
+    margin-right: 5%;
+}
+
+.fa-ellipsis-h:hover {
+    cursor: pointer;
+}
+
+.dropdown-item:hover {
+    background-color: #d9d9d9;
+    cursor: pointer;
+}
+
+.fa-backward:hover {
+    cursor: pointer;
+}
+
+.fa-forward:hover {
+    cursor: pointer;
+}
+
+.fa-backward,
+.fa-forward {
+    margin: 5px;
+}
+
+.inbox-item {
+    border-top: none;
+    border-bottom: #cfcfcf 1px solid;
+}
+
+.inbox-item:hover {
+    cursor: pointer;
+    /* border-right: #343a40 3px solid; */
+}
+
+.inbox-item:hover~.sep {
+    background-color: #343a40;
+}
+
+.inbox-item:hover~.sep {
+    background-color: #343a40;
+}
+
+.fa-star {
+    display: none;
+}
+
+.inbox-item:hover .fa-star {
+    display: block;
+}
+
+#inbox-nav {
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+#inbox-nav::-webkit-scrollbar-track {
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+    background-color: #F5F5F5;
+}
+
+#inbox-nav::-webkit-scrollbar {
+    width: 6px;
+    background-color: #F5F5F5;
+}
+
+#inbox-nav::-webkit-scrollbar-thumb {
+    background-color: #cfcfcf;
+}
+
+.inbox-selector input[type=radio],
+.inbox-selector input[type=checkbox] {
+    width: 16px;
+    height: 16px;
+}
+
+.msg-notif {
+    font-size: 12px;
+}
+
+.c-py {
+    max-height: 20px;
+}
+
+.msg-subject {
+    font-size: x-large;
+}
+
+select.form-control {
+    text-indent: 16px;
+}
+
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -1px;
+}
+
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu a::after {
+    transform: rotate(-90deg);
+    position: absolute;
+    right: 6px;
+    top: .8em;
+}
+
+.dropdown-submenu .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-left: .1rem;
+    margin-right: .1rem;
+}
+
+.msg-active {
+    background-color: #e6e6e6;
+}
+
+.sm-text {
+    font-size: 13px;
 }
