--- a/public/css/inbox.css
+++ b/public/css/inbox.css
@@ -107,6 +107,12 @@
     background-color: #cfcfcf;
 }
 
+@media only screen and (max-width: 767px) {
+    #inbox-nav {
+        height: 40vh !important;
+    }
+}
+
 .inbox-selector input[type=radio],
 .inbox-selector input[type=checkbox] {
     width: 16px;
